--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd /home/joostenr/Fullstack/FullStackUH19/part2/phonebook && npm run build --prod && cp -r build /home/joostenr/FS-p3/FS-Part3",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "Rick Joosten",
   "license": "MIT",
@@ -23,6 +24,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^6.5.1",
     "nodemon": "^1.19.3"
   }
 }
